[package]
name = "colordata"
version = "0.1.1"
edition = "2018"
authors = ["Pirate Caveman <piratecaveman@protonmail.com>"]
repository = "https://github.com/piratecaveman/colordata"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
once_cell = "1.8.0"
